Add currentPrice to constants

--- a/apps/marketing/src/app/(legal)/terms-of-service/page.mdx
+++ b/apps/marketing/src/app/(legal)/terms-of-service/page.mdx
@@ -1,3 +1,5 @@
+import { currentPrice } from "@/constants";
+
 # Termeni și condiții
 
 1. Prin utilizarea acestui site, sunteți de acord cu aceste condiții de utilizare
@@ -71,7 +73,7 @@ De asemenea, Stoica Digital nu autorizează conținutul sau orice produse și se
 
 8. Plăți
 
-Prepi este un serviciu plătit cu o perioadă de încercare de 14 zile. Prețul Prepi este de 64.99 RON/lună atunci când abonamentul este inițiat dintr-un browser web, iar 39.99 RON/lună atunci când abonamentul este inițiat din aplicația de iOS din Apple App Store. Contul poate fi folosit pe orice platformă compatibilă, indiferent de platforma de pe care a fost inițiat abonamentul. Plata se poate face doar online, prin card bancar.
+Prepi este un serviciu plătit cu o perioadă de încercare de 14 zile. Prețul Prepi este de {currentPrice} atunci când abonamentul este inițiat dintr-un browser web. Plata se poate face doar online, prin card bancar.
 
 Este obligatoriu de informat imediat banca în cazul în care echipamentele puse la dispoziție de aceasta nu funcționează în condițiile stabilite. Banca va trece la soluționarea cazului semnalat în maxim 48 de ore de la momentul primirii notificării scrise.
 
